--- a/main.css
+++ b/main.css
@@ -87,4 +87,56 @@ section p {
     display: incline;
     margin-right: 8px;
 }
-sa
+
+.social-links li a {   
+    text-decoration: none;
+}
+
+#contact .container {
+    display: block;
+}
+
+.contact-methods {
+    display: flex;
+    justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+}
+
+section h3{
+    margin-bottom: 16px;
+}
+
+form button {
+    background-color: #182c61 ;
+    color: #ecf0f1;
+    border: none;
+    cursor:pointer
+}
+
+form button:houver {
+    background-color: #314e9e;
+}
+
+input:focus, textarea:focus {
+    outline-color: #182c61;
+}
+
+footer {
+    background-color: #182c61;
+    color:#ecf0f1;
+    padding: 16px 0;
+}
+
